6/13/10 concentration slider tick labels: 0.001 0.01 0.1 1
# 0.00.09 (41585) Jun 12, 2010
6/12/10 dev version to demonstrate progress
6/12/10 make pH meter "on" by default
6/12/10 remove magnifying-glass-prototype from build properties
6/12/10 add drag handler to pH meter, unconstrained vertical dragging, some error in coordinate frame transforms
6/12/10 move origin of PHMeterNode to tip of probe
6/12/10 red foreground color for controls that aren't implemented
6/12/10 wire up visiblity controls for pH meter and magnifying glass
6/12/10 add base class model element for things that have location and visibility
6/12/10 wire up controls for custom solutions (type, concentration, strength)
6/12/10 move some constants to ABSConstants
6/12/10 model refinements
6/12/10 make solution color transparent, put pH meter behind solution
6/12/10 move common canvas code into base class
6/11/10 wire up "Show Water" control
6/11/10 big simplifications to model, eliminate Solute class hierarchy
6/11/10 use strengths and concentrations for "Test" solutions as specified by KL
6/11/10 refinement of Solution and Solute model hierarchies
6/9/10 adapt magnifying glass from prototype
6/9/10 wire up controls to set "test" solutions
6/9/10 fix i18n of pH meter display
6/9/10 remove some bogus dependencies on advanced-acid-base-solutions
6/5/10 pH meter, adapted from advanced-acid-base-solutions
6/5/10 models for "test" and "custom" solutes
6/4/10 beaker model and view
6/4/10 javadoc controls
6/4/10 convenience subclass for radio buttons
6/4/10 add tick marks to concentration slider, doc oddities with this
6/3/10 added simple versions of all controls to control panels (no fancy icons)
6/3/10 skeletons for control panels
6/3/10 skeletons for modules and canvases
6/3/10 localize all strings shown in design doc
6/3/10 reorganize package structure
6/3/10 implement model base classes
6/2/10 sim development begins
# 0.00.08 (40783) May 15, 2010