@@ -48,11 +48,11 @@ public class ABSConstants {
     public static final boolean BEAKER_VISIBLE = true;
     
     public static final Point2D MAGNIFYING_GLASS_LOCATION = new Point2D.Double( BEAKER_LOCATION.getX(), BEAKER_LOCATION.getY() - ( BEAKER_SIZE.getHeight() / 2 ) );
-    public static final boolean MAGNIFYING_GLASS_VISIBLE = false;
+    public static final boolean MAGNIFYING_GLASS_VISIBLE = true; //XXX
     public static final double MAGNIFYING_GLASS_DIAMETER = 500;
     
     public static final Point2D PH_METER_LOCATION = new Point2D.Double( BEAKER_LOCATION.getX() + ( BEAKER_SIZE.getWidth() / 4 ), BEAKER_LOCATION.getY() - BEAKER_SIZE.getHeight() - 15 );
-    public static final boolean PH_METER_VISIBLE = true; //XXX
+    public static final boolean PH_METER_VISIBLE = true;
     public static final double PH_METER_SHAFT_LENGTH = 125;
     
     public static final double WATER_CONCENTRATION = 55.6; // water concentration when it's used as a solvent, mol/L
